tests/core/snapshots/test-union-ambiguous.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "nested": {
        "foo": {},
        "bar": {
          "bar": "nested-bar"
        }
      }
    }
  }
}
