tests/core/snapshots/test-union-ambiguous.md_3.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "arr": [
        {
          "bar": null
        },
        {
          "bar": "bar2"
        },
        {
          "bar": null
        },
        {
          "bar": null
        },
        {
          "bar": "bar5"
        }
      ]
    }
  }
}
