tests/core/snapshots/test-union-ambiguous.md_4.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "unknown": {
        "bar": null
      }
    }
  }
}
