tests/core/snapshots/test-union-ambiguous.md_5.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "wrong": {
        "__typename": "Baz"
      }
    }
  }
}
