tests/core/snapshots/test-union-ambiguous.md_6.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "IOException: Cannot discriminate the type of a non object type.",
        "locations": [
          {
            "line": 2,
            "column": 3
          }
        ],
        "extensions": {
          "cause": "Cannot discriminate the type of a non object type."
        }
      }
    ]
  }
}
