tests/core/snapshots/test-union-fieldtype.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "foo": {
        "foo": "test-foo"
      }
    }
  }
}
