tests/core/snapshots/test-union-fieldtype.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "bar": {
        "bar": "test-bar"
      }
    }
  }
}
