tests/core/snapshots/test-union-fieldtype.md_3.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "arr": [
        {
          "foo": "foo1"
        },
        {
          "bar": "bar2"
        },
        {
          "foo": "foo3"
        },
        {
          "foo": "foo4"
        },
        {
          "bar": "bar5"
        }
      ]
    }
  }
}
