tests/core/snapshots/test-union-fieldtype.md_4.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "IOException: The type `Unknown` is not in the list of acceptable types [\"Bar\", \"Foo\"] of TypeFieldDiscriminator(type=\"FooBar\")",
        "locations": [
          {
            "line": 2,
            "column": 3
          }
        ],
        "extensions": {
          "ioError": null
        }
      }
    ]
  }
}
